--- a/frontend/src/app/landing/landing.component.html
+++ b/frontend/src/app/landing/landing.component.html
@@ -13,28 +13,7 @@
         <span></span>
         <span></span>
       </div>
-      <div class="container py-lg-md d-flex">
-        <div class="col px-0">
-          <div class="row">
-            <div class="col-lg-6">
-              <h1 class="display-3  text-white">A beautiful Design System
-                <span>completed with examples</span>
-              </h1>
-              <p class="lead  text-white">The design system comes with four pre-built pages to help you get started faster. You can change the text and images and you're good to go.</p>
-              <div class="btn-wrapper">
-                <a href="https://demos.creative-tim.com/argon-design-system-angular/documentation/alerts?ref=adsa-landing-page" class="btn btn-info btn-icon mb-3 mb-sm-0">
-                  <span class="btn-inner--icon"><i class="fa fa-code"></i></span>
-                  <span class="btn-inner--text">Components</span>
-                </a>
-                <a href="https://www.creative-tim.com/product/argon-design-system-angular?ref=adsa-landing-page" class="btn btn-white btn-icon mb-3 mb-sm-0">
-                  <span class="btn-inner--icon"><i class="ni ni-cloud-download-95"></i></span>
-                  <span class="btn-inner--text">Download Angular</span>
-                </a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
+    
       <!-- SVG separator -->
       <div class="separator separator-bottom separator-skew">
         <svg x="0" y="0" viewBox="0 0 2560 100" preserveAspectRatio="none" version="1.1" xmlns="http://www.w3.org/2000/svg">
@@ -46,63 +25,38 @@
   </div>
   <section class="section section-lg pt-lg-0 mt--200">
     <div class="container">
-      <div class="row justify-content-center">
-        <div class="col-lg-12">
-          <div class="row row-grid">
-            <div class="col-lg-4">
-              <div class="card card-lift--hover shadow border-0">
-                <div class="card-body py-5">
-                  <div class="icon icon-shape icon-shape-primary rounded-circle mb-4">
-                    <i class="ni ni-check-bold"></i>
-                  </div>
-                  <h6 class="text-primary text-uppercase">Download Argon</h6>
-                  <p class="description mt-3">Argon is a great free UI package based on Angular that includes the most important components and features.</p>
-                  <div>
-                    <span class="badge badge-pill badge-primary">angular</span>
-                    <span class="badge badge-pill badge-primary">ng-bootstrap</span>
-                    <span class="badge badge-pill badge-primary">creative</span>
-                  </div>
-                  <a href="javascript:void(0)" class="btn btn-primary mt-4">Learn more</a>
-                </div>
-              </div>
+        <ngb-tabset [justify]="'center'" class="custom-tab-content flex-column flex-md-row" type="pills">
+          <ngb-tab>
+            <ng-template ngbTabTitle>
+              <i class="ni ni-cloud-upload-96 mr-2"></i> text
+            </ng-template>
+              <ng-template ngbTabContent>
+                
+                    <div class="card-body">
+                      <div class="icon icon-shape icon-shape-warning rounded-circle mb-4"  style="margin-right: 10 px ;">
+                        <i class="ni ni-bulb-61"></i> 
+                      </div> <span class="text-warning "> What sentence you want to guess its emotions ? </span>
+                      <form class="example-form">                
+                        <mat-form-field class="example-full-width" [style.width.px]=500 >
+                          <mat-label>Please enter your text </mat-label>
+                          <textarea matInput [style.height.px]=190 ></textarea>
+                        </mat-form-field>
+                      </form>
+                      <a href="javascript:void(0)" class="btn btn-warning mt-4"> Enjoy ! </a>
+                    
             </div>
-            <div class="col-lg-4">
-              <div class="card card-lift--hover shadow border-0">
-                <div class="card-body py-5">
-                  <div class="icon icon-shape icon-shape-success rounded-circle mb-4">
-                    <i class="ni ni-istanbul"></i>
-                  </div>
-                  <h6 class="text-success text-uppercase">Build Something</h6>
-                  <p class="description mt-3">Argon is a great free UI package based on Angular that includes the most important components and features.</p>
-                  <div>
-                    <span class="badge badge-pill badge-success">business</span>
-                    <span class="badge badge-pill badge-success">vision</span>
-                    <span class="badge badge-pill badge-success">success</span>
-                  </div>
-                  <a href="javascript:void(0)" class="btn btn-success mt-4">Learn more</a>
-                </div>
-              </div>
-            </div>
-            <div class="col-lg-4">
-              <div class="card card-lift--hover shadow border-0">
-                <div class="card-body py-5">
-                  <div class="icon icon-shape icon-shape-warning rounded-circle mb-4">
-                    <i class="ni ni-planet"></i>
-                  </div>
-                  <h6 class="text-warning text-uppercase">Prepare Launch</h6>
-                  <p class="description mt-3">Argon is a great free UI package based on Angular that includes the most important components and features.</p>
-                  <div>
-                    <span class="badge badge-pill badge-warning">marketing</span>
-                    <span class="badge badge-pill badge-warning">product</span>
-                    <span class="badge badge-pill badge-warning">launch</span>
-                  </div>
-                  <a href="javascript:void(0)" class="btn btn-warning mt-4">Learn more</a>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
+              </ng-template>
+          </ngb-tab>
+          <ngb-tab>
+            <ng-template ngbTabTitle >
+              <i class="ni ni-cloud-upload-96 mr-2"></i> upload file
+            </ng-template>
+              <ng-template ngbTabContent>
+              </ng-template>
+          </ngb-tab>
+      </ngb-tabset>
+           
+      
     </div>
   </section>
   <section class="section section-lg">
