establishing front to back link

--- a/frontend/src/app/landing/landing.component.html
+++ b/frontend/src/app/landing/landing.component.html
@@ -42,7 +42,7 @@
                           <textarea matInput [style.height.px]=190 ></textarea>
                         </mat-form-field>
                       </form>
-                      <a href="javascript:void(0)" class="btn btn-warning mt-4"> Enjoy ! </a>
+                      <a (click)="test()" class="btn btn-warning mt-4"> Enjoy ! </a>
                     
             </div>
               </ng-template>
